# Generated by Django 5.2.16 on 2026-08-09 17:01

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='SiteSettings',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('singleton_key', models.CharField(default='global', max_length=20, unique=True)),
                ('site_name', models.CharField(max_length=200)),
                ('site_description', models.TextField(blank=True, null=True)),
                ('default_seo_title', models.CharField(blank=True, max_length=250, null=True)),
                ('default_seo_description', models.TextField(blank=True, null=True)),
                ('posts_per_page', models.PositiveIntegerField(default=12)),
                ('registration_enabled', models.BooleanField(default=True)),
                ('comments_require_approval', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('updated_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
